WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199198
Wrong title for Data Detectors tap action menu
https://bugs.webkit.org/show_bug.cgi?id=199198
Summary
Wrong title for Data Detectors tap action menu
Tim Horton
Reported
2019-06-25 13:02:54 PDT
Wrong title for Data Detectors tap action menu
Attachments
Patch
(2.36 KB, patch)
2019-06-25 13:03 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-06-25 13:03:06 PDT
Created
attachment 372852
[details]
Patch
Tim Horton
Comment 2
2019-06-25 13:03:08 PDT
<
rdar://problem/51957842
>
WebKit Commit Bot
Comment 3
2019-06-25 13:51:18 PDT
Comment on
attachment 372852
[details]
Patch Clearing flags on attachment: 372852 Committed
r246805
: <
https://trac.webkit.org/changeset/246805
>
WebKit Commit Bot
Comment 4
2019-06-25 13:51:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug