Wrong title for Data Detectors tap action menu https://bugs.webkit.org/show_bug.cgi?id=199198 <rdar://problem/51957842>

Reviewed by Wenson Hsieh.

* UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant showDataDetectorsSheet]):
Always pass the results array through to DataDetectors; they need it
to figure out the title too!


Canonical link: https://commits.webkit.org/213162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246805 268f45cc-cd09-0410-ab3c-d52691b4dbfc